src/parser/potigolParser.js
// Generated from potigol.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var potigolListener = require('./potigolListener').potigolListener;
var grammarFileName = "potigol.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'escreva'", "'imprima'", "':='", "'['", "']'", 
                     "':'", "'='", "'var'", "'('", "')'", "'fim'", "'tipo'", 
                     "'abstrato'", "'use'", "'retorne'", "','", "'=>'", 
                     "'.'", "'^'", "'::'", "'+'", "'-'", "'*'", "'/'", "'div'", 
                     "'mod'", "'formato'", "'>'", "'>='", "'<'", "'<='", 
                     "'=='", "'<>'", "'nao'", "'n\\u00e3o'", "'e'", "'ou'", 
                     "'isto'", "'_'", "'se'", "'entao'", "'ent\\u00e3o'", 
                     "'senaose'", "'sen\\u00e3ose'", "'senao'", "'sen\\u00e3o'", 
                     "'escolha'", "'caso'", "'|'", "'para'", "'gere'", "'enquanto'", 
                     "'em'", "'de'", "'ate'", "'at\\u00e9'", "'passo'", 
                     "'faca'", "'fa\\u00e7a'", null, null, null, null, null, 
                     null, null, null, null, null, null, "'\n'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, "ID", "INT", "FLOAT", 
                      "STRING", "BS", "MS", "ES", "CHAR", "BOOLEANO", "WS", 
                      "COMMENT", "NL" ];

var ruleNames =  [ "prog", "inst", "cmd", "decl", "decl_valor", "decl_funcao", 
                   "decl_tipo", "membros", "decl_uso", "retorne", "dcl", 
                   "dcl_var", "dcl_fun", "dcls", "dcl1", "tipo", "expr", 
                   "literal", "decisao", "se", "entao", "senaose", "senao", 
                   "escolha", "caso", "padrao", "repeticao", "para_faca", 
                   "para_gere", "enquanto", "faixa", "faixas", "bloco", 
                   "expr1", "expr2", "id1", "id2", "qualid", "qualid1", 
                   "qualid2", "tipo2", "exprlist" ];

function potigolParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

potigolParser.prototype = Object.create(antlr4.Parser.prototype);
potigolParser.prototype.constructor = potigolParser;

Object.defineProperty(potigolParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

potigolParser.EOF = antlr4.Token.EOF;
potigolParser.T__0 = 1;
potigolParser.T__1 = 2;
potigolParser.T__2 = 3;
potigolParser.T__3 = 4;
potigolParser.T__4 = 5;
potigolParser.T__5 = 6;
potigolParser.T__6 = 7;
potigolParser.T__7 = 8;
potigolParser.T__8 = 9;
potigolParser.T__9 = 10;
potigolParser.T__10 = 11;
potigolParser.T__11 = 12;
potigolParser.T__12 = 13;
potigolParser.T__13 = 14;
potigolParser.T__14 = 15;
potigolParser.T__15 = 16;
potigolParser.T__16 = 17;
potigolParser.T__17 = 18;
potigolParser.T__18 = 19;
potigolParser.T__19 = 20;
potigolParser.T__20 = 21;
potigolParser.T__21 = 22;
potigolParser.T__22 = 23;
potigolParser.T__23 = 24;
potigolParser.T__24 = 25;
potigolParser.T__25 = 26;
potigolParser.T__26 = 27;
potigolParser.T__27 = 28;
potigolParser.T__28 = 29;
potigolParser.T__29 = 30;
potigolParser.T__30 = 31;
potigolParser.T__31 = 32;
potigolParser.T__32 = 33;
potigolParser.T__33 = 34;
potigolParser.T__34 = 35;
potigolParser.T__35 = 36;
potigolParser.T__36 = 37;
potigolParser.T__37 = 38;
potigolParser.T__38 = 39;
potigolParser.T__39 = 40;
potigolParser.T__40 = 41;
potigolParser.T__41 = 42;
potigolParser.T__42 = 43;
potigolParser.T__43 = 44;
potigolParser.T__44 = 45;
potigolParser.T__45 = 46;
potigolParser.T__46 = 47;
potigolParser.T__47 = 48;
potigolParser.T__48 = 49;
potigolParser.T__49 = 50;
potigolParser.T__50 = 51;
potigolParser.T__51 = 52;
potigolParser.T__52 = 53;
potigolParser.T__53 = 54;
potigolParser.T__54 = 55;
potigolParser.T__55 = 56;
potigolParser.T__56 = 57;
potigolParser.T__57 = 58;
potigolParser.T__58 = 59;
potigolParser.ID = 60;
potigolParser.INT = 61;
potigolParser.FLOAT = 62;
potigolParser.STRING = 63;
potigolParser.BS = 64;
potigolParser.MS = 65;
potigolParser.ES = 66;
potigolParser.CHAR = 67;
potigolParser.BOOLEANO = 68;
potigolParser.WS = 69;
potigolParser.COMMENT = 70;
potigolParser.NL = 71;

potigolParser.RULE_prog = 0;
potigolParser.RULE_inst = 1;
potigolParser.RULE_cmd = 2;
potigolParser.RULE_decl = 3;
potigolParser.RULE_decl_valor = 4;
potigolParser.RULE_decl_funcao = 5;
potigolParser.RULE_decl_tipo = 6;
potigolParser.RULE_membros = 7;
potigolParser.RULE_decl_uso = 8;
potigolParser.RULE_retorne = 9;
potigolParser.RULE_dcl = 10;
potigolParser.RULE_dcl_var = 11;
potigolParser.RULE_dcl_fun = 12;
potigolParser.RULE_dcls = 13;
potigolParser.RULE_dcl1 = 14;
potigolParser.RULE_tipo = 15;
potigolParser.RULE_expr = 16;
potigolParser.RULE_literal = 17;
potigolParser.RULE_decisao = 18;
potigolParser.RULE_se = 19;
potigolParser.RULE_entao = 20;
potigolParser.RULE_senaose = 21;
potigolParser.RULE_senao = 22;
potigolParser.RULE_escolha = 23;
potigolParser.RULE_caso = 24;
potigolParser.RULE_padrao = 25;
potigolParser.RULE_repeticao = 26;
potigolParser.RULE_para_faca = 27;
potigolParser.RULE_para_gere = 28;
potigolParser.RULE_enquanto = 29;
potigolParser.RULE_faixa = 30;
potigolParser.RULE_faixas = 31;
potigolParser.RULE_bloco = 32;
potigolParser.RULE_expr1 = 33;
potigolParser.RULE_expr2 = 34;
potigolParser.RULE_id1 = 35;
potigolParser.RULE_id2 = 36;
potigolParser.RULE_qualid = 37;
potigolParser.RULE_qualid1 = 38;
potigolParser.RULE_qualid2 = 39;
potigolParser.RULE_tipo2 = 40;
potigolParser.RULE_exprlist = 41;

function ProgContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = potigolParser.RULE_prog;
    return this;
}

ProgContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgContext.prototype.constructor = ProgContext;

ProgContext.prototype.inst = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(InstContext);
    } else {
        return this.getTypedRuleContext(InstContext,i);
    }
};

ProgContext.prototype.enterRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.enterProg(this);
	}
};

ProgContext.prototype.exitRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.exitProg(this);
	}
};




potigolParser.ProgContext = ProgContext;

potigolParser.prototype.prog = function() {

    var localctx = new ProgContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, potigolParser.RULE_prog);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 87;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << potigolParser.T__0) | (1 << potigolParser.T__1) | (1 << potigolParser.T__3) | (1 << potigolParser.T__7) | (1 << potigolParser.T__8) | (1 << potigolParser.T__11) | (1 << potigolParser.T__13) | (1 << potigolParser.T__20) | (1 << potigolParser.T__21))) !== 0) || ((((_la - 34)) & ~0x1f) == 0 && ((1 << (_la - 34)) & ((1 << (potigolParser.T__33 - 34)) | (1 << (potigolParser.T__34 - 34)) | (1 << (potigolParser.T__37 - 34)) | (1 << (potigolParser.T__38 - 34)) | (1 << (potigolParser.T__39 - 34)) | (1 << (potigolParser.T__46 - 34)) | (1 << (potigolParser.T__49 - 34)) | (1 << (potigolParser.T__51 - 34)) | (1 << (potigolParser.T__57 - 34)) | (1 << (potigolParser.T__58 - 34)) | (1 << (potigolParser.ID - 34)) | (1 << (potigolParser.INT - 34)) | (1 << (potigolParser.FLOAT - 34)) | (1 << (potigolParser.STRING - 34)) | (1 << (potigolParser.BS - 34)))) !== 0) || _la===potigolParser.CHAR || _la===potigolParser.BOOLEANO) {
            this.state = 84;
            this.inst();
            this.state = 89;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function InstContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = potigolParser.RULE_inst;
    return this;
}

InstContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InstContext.prototype.constructor = InstContext;

InstContext.prototype.decl = function() {
    return this.getTypedRuleContext(DeclContext,0);
};

InstContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

InstContext.prototype.bloco = function() {
    return this.getTypedRuleContext(BlocoContext,0);
};

InstContext.prototype.cmd = function() {
    return this.getTypedRuleContext(CmdContext,0);
};

InstContext.prototype.enterRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.enterInst(this);
	}
};

InstContext.prototype.exitRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.exitInst(this);
	}
};




potigolParser.InstContext = InstContext;

potigolParser.prototype.inst = function() {

    var localctx = new InstContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, potigolParser.RULE_inst);
    try {
        this.state = 94;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 90;
            this.decl();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 91;
            this.expr(0);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 92;
            this.bloco();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 93;
            this.cmd();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function CmdContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = potigolParser.RULE_cmd;
    return this;
}

CmdContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CmdContext.prototype.constructor = CmdContext;


 
CmdContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function Atrib_simplesContext(parser, ctx) {
	CmdContext.call(this, parser);
    CmdContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Atrib_simplesContext.prototype = Object.create(CmdContext.prototype);
Atrib_simplesContext.prototype.constructor = Atrib_simplesContext;

potigolParser.Atrib_simplesContext = Atrib_simplesContext;

Atrib_simplesContext.prototype.qualid1 = function() {
    return this.getTypedRuleContext(Qualid1Context,0);
};

Atrib_simplesContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};
Atrib_simplesContext.prototype.enterRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.enterAtrib_simples(this);
	}
};

Atrib_simplesContext.prototype.exitRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.exitAtrib_simples(this);
	}
};


function EscrevaContext(parser, ctx) {
	CmdContext.call(this, parser);
    CmdContext.prototype.copyFrom.call(this, ctx);
    return this;
}

EscrevaContext.prototype = Object.create(CmdContext.prototype);
EscrevaContext.prototype.constructor = EscrevaContext;

potigolParser.EscrevaContext = EscrevaContext;

EscrevaContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};
EscrevaContext.prototype.enterRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.enterEscreva(this);
	}
};

EscrevaContext.prototype.exitRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.exitEscreva(this);
	}
};


function ImprimaContext(parser, ctx) {
	CmdContext.call(this, parser);
    CmdContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ImprimaContext.prototype = Object.create(CmdContext.prototype);
ImprimaContext.prototype.constructor = ImprimaContext;

potigolParser.ImprimaContext = ImprimaContext;

ImprimaContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};
ImprimaContext.prototype.enterRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.enterImprima(this);
	}
};

ImprimaContext.prototype.exitRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.exitImprima(this);
	}
};


function Set_vetorContext(parser, ctx) {
	CmdContext.call(this, parser);
    CmdContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Set_vetorContext.prototype = Object.create(CmdContext.prototype);
Set_vetorContext.prototype.constructor = Set_vetorContext;

potigolParser.Set_vetorContext = Set_vetorContext;

Set_vetorContext.prototype.qualid = function() {
    return this.getTypedRuleContext(QualidContext,0);
};

Set_vetorContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};
Set_vetorContext.prototype.enterRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.enterSet_vetor(this);
	}
};

Set_vetorContext.prototype.exitRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.exitSet_vetor(this);
	}
};


function Atrib_multiplaContext(parser, ctx) {
	CmdContext.call(this, parser);
    CmdContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Atrib_multiplaContext.prototype = Object.create(CmdContext.prototype);
Atrib_multiplaContext.prototype.constructor = Atrib_multiplaContext;

potigolParser.Atrib_multiplaContext = Atrib_multiplaContext;

Atrib_multiplaContext.prototype.qualid2 = function() {
    return this.getTypedRuleContext(Qualid2Context,0);
};

Atrib_multiplaContext.prototype.expr2 = function() {
    return this.getTypedRuleContext(Expr2Context,0);
};
Atrib_multiplaContext.prototype.enterRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.enterAtrib_multipla(this);
	}
};

Atrib_multiplaContext.prototype.exitRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.exitAtrib_multipla(this);
	}
};



potigolParser.CmdContext = CmdContext;

potigolParser.prototype.cmd = function() {

    var localctx = new CmdContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, potigolParser.RULE_cmd);
    var _la = 0; // Token type
    try {
        this.state = 120;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            localctx = new EscrevaContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 96;
            this.match(potigolParser.T__0);
            this.state = 97;
            this.expr(0);
            break;

        case 2:
            localctx = new ImprimaContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 98;
            this.match(potigolParser.T__1);
            this.state = 99;
            this.expr(0);
            break;

        case 3:
            localctx = new Atrib_simplesContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 100;
            this.qualid1();
            this.state = 101;
            this.match(potigolParser.T__2);
            this.state = 102;
            this.expr(0);
            break;

        case 4:
            localctx = new Atrib_multiplaContext(this, localctx);
            this.enterOuterAlt(localctx, 4);
            this.state = 104;
            this.qualid2();
            this.state = 105;
            this.match(potigolParser.T__2);
            this.state = 106;
            this.expr2();
            break;

        case 5:
            localctx = new Set_vetorContext(this, localctx);
            this.enterOuterAlt(localctx, 5);
            this.state = 108;
            this.qualid();
            this.state = 113; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 109;
                this.match(potigolParser.T__3);
                this.state = 110;
                this.expr(0);
                this.state = 111;
                this.match(potigolParser.T__4);
                this.state = 115; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===potigolParser.T__3);
            this.state = 117;
            this.match(potigolParser.T__2);
            this.state = 118;
            this.expr(0);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = potigolParser.RULE_decl;
    return this;
}

DeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DeclContext.prototype.constructor = DeclContext;

DeclContext.prototype.decl_valor = function() {
    return this.getTypedRuleContext(Decl_valorContext,0);
};

DeclContext.prototype.decl_funcao = function() {
    return this.getTypedRuleContext(Decl_funcaoContext,0);
};

DeclContext.prototype.decl_tipo = function() {
    return this.getTypedRuleContext(Decl_tipoContext,0);
};

DeclContext.prototype.decl_uso = function() {
    return this.getTypedRuleContext(Decl_usoContext,0);
};

DeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.enterDecl(this);
	}
};

DeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.exitDecl(this);
	}
};




potigolParser.DeclContext = DeclContext;

potigolParser.prototype.decl = function() {

    var localctx = new DeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, potigolParser.RULE_decl);
    try {
        this.state = 126;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 122;
            this.decl_valor();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 123;
            this.decl_funcao();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 124;
            this.decl_tipo();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 125;
            this.decl_uso();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Decl_valorContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = potigolParser.RULE_decl_valor;
    return this;
}

Decl_valorContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Decl_valorContext.prototype.constructor = Decl_valorContext;


 
Decl_valorContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function Decl_var_multiplaContext(parser, ctx) {
	Decl_valorContext.call(this, parser);
    Decl_valorContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Decl_var_multiplaContext.prototype = Object.create(Decl_valorContext.prototype);
Decl_var_multiplaContext.prototype.constructor = Decl_var_multiplaContext;

potigolParser.Decl_var_multiplaContext = Decl_var_multiplaContext;

Decl_var_multiplaContext.prototype.id2 = function() {
    return this.getTypedRuleContext(Id2Context,0);
};

Decl_var_multiplaContext.prototype.expr2 = function() {
    return this.getTypedRuleContext(Expr2Context,0);
};

Decl_var_multiplaContext.prototype.tipo = function() {
    return this.getTypedRuleContext(TipoContext,0);
};
Decl_var_multiplaContext.prototype.enterRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.enterDecl_var_multipla(this);
	}
};

Decl_var_multiplaContext.prototype.exitRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.exitDecl_var_multipla(this);
	}
};


function Valor_multiploContext(parser, ctx) {
	Decl_valorContext.call(this, parser);
    Decl_valorContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Valor_multiploContext.prototype = Object.create(Decl_valorContext.prototype);
Valor_multiploContext.prototype.constructor = Valor_multiploContext;

potigolParser.Valor_multiploContext = Valor_multiploContext;

Valor_multiploContext.prototype.id2 = function() {
    return this.getTypedRuleContext(Id2Context,0);
};

Valor_multiploContext.prototype.expr2 = function() {
    return this.getTypedRuleContext(Expr2Context,0);
};

Valor_multiploContext.prototype.tipo = function() {
    return this.getTypedRuleContext(TipoContext,0);
};
Valor_multiploContext.prototype.enterRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.enterValor_multiplo(this);
	}
};

Valor_multiploContext.prototype.exitRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.exitValor_multiplo(this);
	}
};


function Valor_simplesContext(parser, ctx) {
	Decl_valorContext.call(this, parser);
    Decl_valorContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Valor_simplesContext.prototype = Object.create(Decl_valorContext.prototype);
Valor_simplesContext.prototype.constructor = Valor_simplesContext;

potigolParser.Valor_simplesContext = Valor_simplesContext;

Valor_simplesContext.prototype.id1 = function() {
    return this.getTypedRuleContext(Id1Context,0);
};

Valor_simplesContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

Valor_simplesContext.prototype.tipo = function() {
    return this.getTypedRuleContext(TipoContext,0);
};
Valor_simplesContext.prototype.enterRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.enterValor_simples(this);
	}
};

Valor_simplesContext.prototype.exitRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.exitValor_simples(this);
	}
};


function Decl_var_simplesContext(parser, ctx) {
	Decl_valorContext.call(this, parser);
    Decl_valorContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Decl_var_simplesContext.prototype = Object.create(Decl_valorContext.prototype);
Decl_var_simplesContext.prototype.constructor = Decl_var_simplesContext;

potigolParser.Decl_var_simplesContext = Decl_var_simplesContext;

Decl_var_simplesContext.prototype.id1 = function() {
    return this.getTypedRuleContext(Id1Context,0);
};

Decl_var_simplesContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

Decl_var_simplesContext.prototype.tipo = function() {
    return this.getTypedRuleContext(TipoContext,0);
};
Decl_var_simplesContext.prototype.enterRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.enterDecl_var_simples(this);
	}
};

Decl_var_simplesContext.prototype.exitRule = function(listener) {
    if(listener instanceof potigolListener ) {
        listener.exitDecl_var_simples(this);
	}
};



potigolParser.Decl_valorContext = Decl_valorContext;

potigolParser.prototype.decl_valor = function() {
